# esp32-lcd1602

./: Cargo.toml  esp32_lcd1602_wiring.md  esp32c6_pins.txt
lcd_i2c_rs/: README.md  saved_Cargo.toml
lcd_i2c_rs/.cargo/: config.toml
lcd_i2c_rs/src/: consts.rs  lib.rs
src/: main.rs
